# rust-vanitygen

./: Cargo.toml
src/: main.rs
