[package]
name = "rust-vanitygen"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.2.0"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", features = ["rand", "use-serde"] }
hex = "0.4"
secp256k1 = { version = "0.29.0", features = ["rand-std"] }

[patch.crates-io]
secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1" }
